# inkscape

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  NEWS.md  README.md  TRANSLATORS  bool-replace.perl  config.h.cmake  enum-replace.sh  glade-update.sh  org.inkscape.Inkscape.appdata.xml.in  props-replace.sh  true_false.txt
CMakeScripts/: ConfigCPack.cmake  ConfigEnvMinGW.cmake  DefineDependsandFlags.cmake  HelperFunctions.cmake  InstallMSYS2.cmake  UnitTest.cmake  blah.diff  inkscape-version.cmake
buildtools/: check_license_headers.py  lpetest-parse.py  media-check-icons.py  msys2installdeps.sh
debian/: control  rules
man/: inkscape.de.pod.in  inkscape.fr.pod.in  inkscape.hu.pod.in  inkscape.zh_TW.pod.in
packaging/: cairo-win32.patch  cairo.patch
po/: LINGUAS  POTFILES.inx.in  POTFILES.py.in  POTFILES.src.in  POTFILES.ui.in  ar.po  as.po  az.po  be.po  bg.po  bn.po  bn_BD.po  br.po  brx.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  doi.po  dz.po  el.po  en_AU.po  en_CA.po  (+70 more)
src/util/: CMakeLists.txt  action-accel.cpp  action-accel.h  document-fonts.cpp  document-fonts.h  drawing-utils.cpp  drawing-utils.h  expression-evaluator.cpp  font-collections.cpp  font-collections.h  font-discovery.cpp  font-discovery.h  font-tags.cpp  font-tags.h  gobjectptr.h  object-renderer.cpp  object-renderer.h  paper.cpp  parse-int-range.cpp  pool.cpp  preview.cpp  recently-used-fonts.cpp  recently-used-fonts.h  source_date_epoch.cpp  statics.h  theme-utils.cpp  theme-utils.h  units.cpp  units.h  ustring_hash.h  variant-visitor.h  xim_fix.cpp  xim_fix.h
(+1162 files in other folders)
